# TIAA_hackathon25

./: README.md  mcp_server_config.json
.github/workflows/: azure-docker-deploy_MCPServer.yml  azure-docker-deploy_MysqlServer.yaml  docker-publish_AzureMCPServer.yml  docker-publish_MysqlServer.yml  docker-publish_RagServer.yaml
Azure_MCP_Server/: Dockerfile  main.py  pyproject.toml  server.py
Azure_MCP_Server/tools/: generate_report_tool.py  mysql_tool.py  vectorize_page.py
Azure_MCP_Server/utils/: coffee_store_db_schema.json  generate_report.py  generate_response.py  mysql_conn.py
MYSQL_server/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt  server.py
MYSQL_server/prompts/: schema_prompt.py
MYSQL_server/resources/: database_context.py
MYSQL_server/tools/: mysql_tool.py
MYSQL_server/utils/: coffee_store_db_schema.json  generate_report.py  llm_prompt.py  mysql_conn.py
RAG_server/: .env  Dockerfile.dockerfile  main.py  pyproject.toml  requirements.txt  server.py
RAG_server/tools/: rag_chain.py  vectorize_page.py
RAG_server/utils/: generate_response.py  generate_vector_embeddings.py  initialize_vectorstore.py
