[project]
name = "mysql-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "mcp[cli]>=1.12.2",
    "mysql-connector-python>=9.4.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
]
